--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,24 @@
-version: '3'
-
-networks:
-  dockernet:
-
+version: '3.5'
 
 services:
   python_server:
+    container_name: python_server
     build: ./python
     restart: always
     # volumes:
     #   - ./successful_requests.log:/logs.log
     ports:
       - 1337:8080
-    networks:
-      - dockernet
+
+
+  db_postgres:
+    container_name: db_postgres
+    restart: always
+    ports:
+      - 5432:5432
+    environment:
+      - POSTGRES_PASSWORD=root
+    image: postgres:13.13-bullseye
+    volumes:
+      - ./postgres/dump.sql:/docker-entrypoint-initdb.d/dump.sql
+    command: ["postgres", "-c", "log_statement=all"]
