--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -7,8 +7,6 @@ WORKDIR /app
 COPY ./src /app/src
 COPY ./requirements.txt /app
 
-RUN apt update; apt upgrade -y;
-RUN apt install -y python3 python3-pip;
-RUN pip install -r requirements.txt
+RUN apt update && apt install -y python3 python3-pip && pip install --no-cache-dir -r requirements.txt
 
 CMD ["python3", "src/run.py"]
