now mounts directory to store db data outside the container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,4 +23,5 @@ services:
     volumes:
       - ./postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
       - /etc/localtime:/etc/localtime:ro
+      - ./postgres/data/:/var/lib/postgresql/data/
     command: ["postgres", "-c", "log_statement=all"]
