--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ services:
 
 # AUTH MICROSERICE
   auth_db:
-    container_name: biokeep_auth_db
+    container_name: biokeeper_auth_db
     image: postgres:latest
     env_file:
       - biokeeper-auth/.db.env
@@ -14,8 +14,8 @@ services:
       # Sync time with host machine
       - /etc/localtime:/etc/localtime:ro
     restart: always
-    # ports:
-      # - 127.0.0.1:5555:5432
+    ports:
+      - 127.0.0.1:5555:5432
     healthcheck:
       test: ["CMD-SHELL", "sh -c 'pg_isready -U biokeeper_auth -d auth_db'"]
       interval: 5s
@@ -69,12 +69,7 @@ services:
     image: postgres
     volumes:
       # DB initialization scripts
-      - ./biokeeper-backend/postgres/01-functions-and-stuff.sql:/docker-entrypoint-initdb.d/01-functions-and-stuff.sql
-      - ./biokeeper-backend/postgres/02-user.sql:/docker-entrypoint-initdb.d/02-user.sql
-      - ./biokeeper-backend/postgres/03-research.sql:/docker-entrypoint-initdb.d/03-research.sql
-      - ./biokeeper-backend/postgres/04-kit.sql:/docker-entrypoint-initdb.d/04-kit.sql
-      - ./biokeeper-backend/postgres/05-qr.sql:/docker-entrypoint-initdb.d/05-qr.sql
-      - ./biokeeper-backend/postgres/06-sample.sql:/docker-entrypoint-initdb.d/06-sample.sql
+      - ./biokeeper-backend/postgres/init_scripts:/docker-entrypoint-initdb.d
       
       # Expose DB data folder to host machine
       - ./biokeeper-backend/postgres/data/:/var/lib/postgresql/data/
