deleted volume for database tests (to create empty every time when running tests)

--- a/docker-compose-tests.yaml
+++ b/docker-compose-tests.yaml
@@ -8,9 +8,11 @@ services:
       - biokeeper-auth/.db.env
     volumes:
       # Database
-      - ./biokeeper-auth/database/data_test:/var/lib/postgresql/data
+      # - ./biokeeper-auth/database/data_test:/var/lib/postgresql/data
+
       # Init scripts
       - ./biokeeper-auth/database/init_scripts:/docker-entrypoint-initdb.d
+      
       # Sync time with host machine
       - /etc/localtime:/etc/localtime:ro
     restart: always
