--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,6 +21,8 @@ services:
       interval: 5s
       timeout: 3s
       retries: 3
+    networks:
+      - internal_net
 
   auth_backend:
     container_name: biokeep_auth_backend
@@ -41,6 +43,8 @@ services:
     restart: always
     ports:
       - 1337:8000
+    networks:
+      - internal_net
 
 
 
@@ -55,8 +59,9 @@ services:
       - /etc/localtime:/etc/localtime:ro
     env_file:
       - jwt_keys/.jwt.public.env
-    # networks:
-    #   - bk
+    networks:
+      internal_net:
+        ipv4_address: 172.30.0.10
 
 
 
@@ -79,14 +84,28 @@ services:
     command: ["postgres", "-c", "log_statement=all"]
     ports:
       - 127.0.0.1:5556:5432
-    # networks:
-    #   bk:
-    #     ipv4_address: 172.25.0.10
+    networks:
+      - internal_net
 
+# RabbitMQ
+  mq:
+    container_name: biokeeper_mq
+    image: rabbitmq:management-alpine
+    restart: always
+    ports:
+      - 127.0.0.1:5672:5672
+      - 127.0.0.1:15672:15672
+    volumes:
+      - /etc/localtime:/etc/localtime:ro
+      - ./biokeeper-mq/rabbitmq_data:/var/lib/rabbitmq
+    env_file:
+      - ./biokeeper-mq/.rabbitmq.env
+    networks:
+      - internal_net
 
-# networks:
-#   bk:
-#     ipam:
-#       config:
-#         - subnet: 172.25.0.0/16
-#           gateway: 172.25.0.1
+networks:
+  internal_net:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 172.30.0.0/16
