env files in auth and core for RABBITMQ login data

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,6 +33,7 @@ services:
       - jwt_keys/.jwt.private.env
       - jwt_keys/.jwt.public.env
       - biokeeper-auth/.rtoken.salt.env
+      - ./biokeeper-mq/env_files/.auth_user.env
     environment:
       - POSTGRES_HOST=auth_db
       - POSTGRES_PORT=5432
@@ -59,6 +60,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
     env_file:
       - jwt_keys/.jwt.public.env
+      - ./biokeeper-mq/env_files/.core_user.env
     networks:
       internal_net:
         ipv4_address: 172.30.0.10
