--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,6 +31,7 @@ services:
       - jwt_keys/.jwt.private.env
       - jwt_keys/.jwt.public.env
       - biokeeper-auth/.rtoken.salt.env
+      - ./.docs.password.env
     environment:
       - POSTGRES_HOST=auth_db
       - POSTGRES_PORT=5432
@@ -55,6 +56,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
     env_file:
       - jwt_keys/.jwt.public.env
+      - ./.docs.password.env
     # networks:
     #   - bk
 
